Samu:
    Market:
        get_ticker():
            Added possibility to display html for jupyter notebooks with relevant info, possibility to display raw request response,
            or display float value of ticker.
            
    Trade:
        get_open_orders():
            Added possibility to display html pandas dataframe for jupyter notebooks with relevant fields for open orders, 
            possibility to display raw request response, or display simple list of all open orders.
        
        get_executions():
            Added possibility to display html pandas dataframe for jupyter notebooks with relevant fields for executed orders, 
            possibility to display raw request response, or display simple list of all open orders.
        
        get_positions():
            Added possibility to display html pandas dataframe for jupyter notebooks with relevant fields for open positions, 
            possibility to display raw request response, or display simple list of all open orders.
    
    Account:
        get_account_info():
            Added possibility to display human readable type of account and type of margin mode, or raw request response.




        
Mic:
    account:
        get_wallet_balance():
            Added possibility to display pie chart of wallet balance for jupyter notebooks, possibiity to display raw request response
            or display a formatted more readable response. 
            Added documentation: now you can see that accountType is a required parameter. 

    Market:
        get_kline():
            Added possibility to display plot of closed price and volume for jupyter notebooks, possibiity to display raw request response,
            also to provide the link to the Bybit Kline page and possibilty to save the Kline data as a CSV file. 